fix: yalb(alignment): add margin top to wrapped image to make it top align with p element

--- a/components/02-molecules/wrapped-image/_yds-wrapped-image.scss
+++ b/components/02-molecules/wrapped-image/_yds-wrapped-image.scss
@@ -39,12 +39,14 @@
       & {
       float: left;
       margin-right: 5%;
+      margin-top: var(--size-spacing-4);
     }
 
     [data-wrapped-image-style='floated'][data-wrapped-image-alignment='right']
       & {
       float: right;
       margin-left: 5%;
+      margin-top: var(--size-spacing-4);
     }
 
     // offset
